import auth from '@react-native-firebase/auth';
import firestore from '@react-native-firebase/firestore';
import {
  Game,
  Leaderboard,
  LeaderboardData,
  LeaderboardItem,
  Question,
} from '../models';

class GameService {
...
    return game;
  }

  async saveGame(game: Game) {
    const userId = auth().currentUser?.uid;
    await firestore()
      .collection('leaderboard')
      .doc(userId)
      .set(
        {
          username: auth().currentUser?.displayName,
          points: firestore.FieldValue.increment(game.points),
        },
...
